@@ -38,4 +38,5 @@ How to ...
 ... add access key details:
       define MANDUCA_ACCESS_KES global with an url pointing to the details.
       
-      
+... add namespace in child theme in order to avoid nam confusions::
+      add the namsepace as a key to Manduca_Classloader. e.g 'Web25\\childtheme' => get_stylesheet_directory() .'/inc/'
