@@ -2,11 +2,26 @@
 /**
  * Jump links to content and sidebar
  * Header template file
- * 
- * @theme: Manduca - focus on accessibility 
- * @since 17.4
- * @last modification 18.10.14
- **/
+ * */
+
+/*  This file is part of WordPress theme named Manduca - focus on accessibility.
+ *
+	Copyright (C) 2015-2018  Zsolt Edelényi (ezs@web25.hu)
+
+    Manduca is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.
+*/
+
 ?>
 <nav id="skip-links" aria-label="<?php _e( 'Jump links' , 'manduca' ) ?>" >
 
